--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
             <div class="login-icon">
                 <i class="fas fa-building"></i>
             </div>
-            <h4 class="text-center fw-bold mb-2">HR Leave Management</h4>
+            <h4 class="text-center fw-bold mb-2">Depot Dispatchers Leave Management</h4>
             <p class="text-center text-muted mb-4">Sign in to your account</p>
             
             <div class="mb-3">
@@ -473,7 +473,7 @@
             
             <div class="col-md-2 sidebar">
                 <div class="sidebar-header">
-                    <h5><i class="fas fa-cube me-2"></i> HR Portal</h5>
+                    <h5><i class="fas fa-cube me-2"></i> Leave Portal</h5>
                     <div class="user-info">
                         <div class="d-flex align-items-center mb-2">
                             <i class="fas fa-user-circle fa-2x me-2"></i>
