--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             <div class="login-icon">
                 <i class="fas fa-building"></i>
             </div>
-            <h4 class="text-center fw-bold mb-2">Depot Dispatcher's Leave Management</h4>
+            <h4 class="text-center fw-bold mb-2">Depot's Dispatcher Leave Management</h4>
             <p class="text-center text-muted mb-4">Sign in to your account</p>
             
             <div class="mb-3">
