--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="text-center mb-4">
                 <i class="fas fa-cubes fa-3x text-primary mb-3"></i>
                 <h4 class="fw-bold">Depot Dispatcher</h4>
-                <p class="text-muted small">Employee Leave Portal</p>
+                <p class="text-muted small">Dispatcher's Leave Portal</p>
             </div>
             <form onsubmit="event.preventDefault(); doLogin();">
                 <div class="mb-3">
@@ -172,7 +172,7 @@
                 <div class="card-custom">
                     <h6 class="fw-bold mb-3">
                         <i class="fas fa-calendar-day me-2 text-primary"></i> 
-                        Who's Out Today?
+                        Who's On Leave Today?
                     </h6>
                     <div id="team-view-container" class="d-flex flex-wrap gap-2">
                         <small class="text-muted">Loading...</small>
@@ -188,7 +188,7 @@
                         <div class="card-custom">
                             <div class="alert alert-info small mb-3">
                                 <i class="fas fa-info-circle me-2"></i> 
-                                <strong>Legend:</strong> Red = Full | Yellow = Limited | Green = Available
+                                <strong>Legend:</strong> Red = Full | Yellow = Limited | White = Available
                             </div>
                             <div id="calendar"></div>
                         </div>
