--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <script>
         // 🔴🔴🔴 ضع الرابط الجديد هنا 🔴🔴🔴
-        const API_URL = "hhttps://script.google.com/macros/s/AKfycbzqnlL3-wlQFop9WMwEgx1JT7DqD_Ss_56tI_86NF6J54d5I7X0qEFRPdzQDdkOScEHVg/exec";
+        const API_URL = "https://script.google.com/macros/s/AKfycbzqnlL3-wlQFop9WMwEgx1JT7DqD_Ss_56tI_86NF6J54d5I7X0qEFRPdzQDdkOScEHVg/exec";
     </script>
 
     <style>
